# LuxTest

./: MANIFEST.in  README.md  setup.cfg
luxtest/: __main__.py  main.py
luxtest/lib/: dev_menu.py  digiview.py
luxtest/views/: mainmenu.py  musicmixer.py
