[metadata]
name = luxtest
version = attr: luxtest.__version__
description = luxtest
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = 
project_urls =
    Source=https://github.com/DigiDuncan/luxtest
    Tracker=https://github.com/DigiDuncan/luxtest/issues

[options]
packages = find:
python_requires = >=3.10
zip_safe = yes
include_package_data = True
install_requires =
    

[options.extras_require]
dev =
    pytest==8.1.1
    flake8==7.0.0
    autopep8==2.1.0

[options.entry_points]
console_scripts =
    luxtest = luxtest.main:main

[flake8]
ignore = E501,W503,E251
per-file-ignores =
    */__init__.py:F401,F403
